--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
+    "miragejs": "^0.1.41",
     "typescript": "^4.3.2"
   }
 }
