--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.9.0",
     "react-icons": "^4.2.0",
+    "react-query": "^3.21.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.8",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
+    "faker": "^5.5.3",
     "miragejs": "^0.1.41",
     "typescript": "^4.3.2"
   }
